# rust-uinput

./: .gitignore  .rustfmt.toml  Cargo.toml  Readme.md  build.rs  events.rs
C/: .gitignore  main.c  run.sh
Python/: events_parser.py
data/: key_events.yaml  mouse_events.yaml  uinput.json  uinput.yaml
src/: .gitignore  main.rs  scenario.xml  test_scenario.rs  uinput.rs
